// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Brands component renders correctly 1`] = `
<div>
  <div
    class="MuiGrid-root Grid MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 MuiGrid-grid-lg-6 MuiGrid-grid-xl-4"
    >
      <a
        aria-disabled="false"
        class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"MC: documentLibrary.card.download\\",\\"action\\":\\"http://localhost:9000/asset-filename.jpg\\"}"
        href="https:http://localhost:9000/asset-filename.jpg"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <img
          alt="contentful image alt text"
          class="header-picture Media"
          src="http://localhost:9000/image-filname.jpg"
          style="object-fit: cover; object-position: center;"
        />
        <div
          class="body"
        >
          <h4
            class="MuiTypography-root title title--no-brand-logo Typography MuiTypography-h4"
          >
            contentful document title
          </h4>
          <div
            class="children text"
          />
          <div
            class="footer"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-contained buttonStyles-contained-3 MuiButton-containedPrimary"
              role="button"
              tabindex="0"
            >
              <span
                class="MuiButton-label buttonStyles-label-4"
              >
                MC: documentLibrary.card.download
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
          </div>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </a>
    </div>
    <div
      class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 MuiGrid-grid-lg-6 MuiGrid-grid-xl-4"
    >
      <a
        aria-disabled="false"
        class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"MC: documentLibrary.card.download\\",\\"action\\":\\"http://localhost:9000/asset-filename.jpg\\"}"
        href="https:http://localhost:9000/asset-filename.jpg"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <div
          class="body"
        >
          <h4
            class="MuiTypography-root title title--no-brand-logo Typography MuiTypography-h4"
          >
            contentful document title
          </h4>
          <div
            class="children text"
          />
          <div
            class="footer"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-contained buttonStyles-contained-3 MuiButton-containedPrimary"
              role="button"
              tabindex="0"
            >
              <span
                class="MuiButton-label buttonStyles-label-4"
              >
                MC: documentLibrary.card.download
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
          </div>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Brands component renders correctly for mobile 1`] = `
<div>
  <div
    class="MuiGrid-root Grid MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 MuiGrid-grid-lg-6 MuiGrid-grid-xl-4"
    >
      <a
        aria-disabled="false"
        class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"MC: documentLibrary.card.download\\",\\"action\\":\\"http://localhost:9000/asset-filename.jpg\\"}"
        href="https:http://localhost:9000/asset-filename.jpg"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <img
          alt="contentful image alt text"
          class="header-picture Media"
          src="http://localhost:9000/image-filname.jpg"
          style="object-fit: cover; object-position: center;"
        />
        <div
          class="body"
        >
          <h4
            class="MuiTypography-root title title--no-brand-logo Typography MuiTypography-h4"
          >
            contentful document title
          </h4>
          <div
            class="children text"
          />
          <div
            class="footer"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiButton-root buttonStyles-root-21 MuiButton-contained buttonStyles-contained-23 MuiButton-containedPrimary"
              role="button"
              tabindex="0"
            >
              <span
                class="MuiButton-label buttonStyles-label-24"
              >
                MC: documentLibrary.card.download
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
          </div>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </a>
    </div>
    <div
      class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 MuiGrid-grid-lg-6 MuiGrid-grid-xl-4"
    >
      <a
        aria-disabled="false"
        class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"MC: documentLibrary.card.download\\",\\"action\\":\\"http://localhost:9000/asset-filename.jpg\\"}"
        href="https:http://localhost:9000/asset-filename.jpg"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <div
          class="body"
        >
          <h4
            class="MuiTypography-root title title--no-brand-logo Typography MuiTypography-h4"
          >
            contentful document title
          </h4>
          <div
            class="children text"
          />
          <div
            class="footer"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiButton-root buttonStyles-root-21 MuiButton-contained buttonStyles-contained-23 MuiButton-containedPrimary"
              role="button"
              tabindex="0"
            >
              <span
                class="MuiButton-label buttonStyles-label-24"
              >
                MC: documentLibrary.card.download
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
          </div>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </a>
    </div>
  </div>
</div>
`;
